minor changes here and there

--- a/styles.css
+++ b/styles.css
@@ -7,24 +7,47 @@ h1 {
   content: 20px;
   padding: 20px;
   border: 20px;
-  margin: auto;
+  margin: 0px;
 }
 nav {
   font-size: 20px;
   font-family: Helvetica;
+  font-weight: bold;
   color: white;
-  background-color: grey;
   text-align: center;
-  content: 5px;
-  padding: 5px;
-  border: 5px;
-  margin: 5px;
+}
+.menu {
+  content: 15px;
+  padding: 15px;
+  border: 15px;
+  margin: 0 0 30px 0;
+  background: lightgrey;
+}
+a {
+  color: white;
 }
 p {
   font-size: 20px;
   font-family: Helvetica;
   color: black;
   background-color: turquoise;
+  content: 20px;
+  padding: 20px;
+  border: 20px;
+  margin: 20px;
+}
+img {
+  /* content: 20px;
+  padding: 20px;
+  border: 20px;
+  margin: 20px; */
+}
+footer {
+  font-size: 14px;
+  font-family: Helvetica;
+  color: white;
+  background-color: black;
+  text-align: center;
   content: 20px;
   padding: 20px;
   border: 20px;
