--- a/styles.css
+++ b/styles.css
@@ -15,16 +15,16 @@ nav {
   font-weight: bold;
   color: white;
   text-align: center;
-}
-.menu {
   content: 15px;
   padding: 15px;
   border: 15px;
   margin: 0 0 30px 0;
   background: lightgrey;
 }
-a {
+.navbut li {
   color: white;
+  display: inline-block;
+  margin: 10px;
 }
 p {
   font-size: 20px;
@@ -36,11 +36,8 @@ p {
   border: 20px;
   margin: 20px;
 }
-img {
-  /* content: 20px;
-  padding: 20px;
-  border: 20px;
-  margin: 20px; */
+.frame {
+  display: inline-block;
 }
 footer {
   font-size: 14px;
