--- a/styles.css
+++ b/styles.css
@@ -9,22 +9,27 @@ h1 {
   border: 20px;
   margin: 0px;
 }
-nav {
+.navbut {
+  text-align: center;
+}
+.navbut ul {
+  padding: 0;
+  margin: 0;
+}
+.navbut li {
   font-size: 20px;
   font-family: Helvetica;
   font-weight: bold;
   color: white;
   text-align: center;
-  content: 15px;
-  padding: 15px;
-  border: 15px;
-  margin: 0 0 30px 0;
+  padding: 10px;
+  margin: auto;
   background: lightgrey;
-}
-.navbut li {
-  color: white;
   display: inline-block;
-  margin: 10px;
+}
+.navbut a {
+  color: white;
+  margin: auto;
 }
 p {
   font-size: 20px;
@@ -38,6 +43,13 @@ p {
 }
 .frame {
   display: inline-block;
+  padding: 10px 5px;
+}
+.links {
+  background-color: gold;
+  text-align: center;
+  padding: 15px;
+  font-family: Helvetica;
 }
 footer {
   font-size: 14px;
